# delta-tickets.academic

./: .gitignore  Makefile  docker-compose.yml
auth/: Cargo.toml
auth/src/api/: auth.rs  router.rs
auth/src/config/: conf.rs
auth/src/models/: errors.rs
auth/src/services/: users.rs
back-events/: Cargo.toml  Dockerfile  Makefile  README.md
back-events/src/: main.rs
back-events/src/api/: events.rs  router.rs
back-events/src/config/: conf.rs
back-events/src/services/: auth.rs  (+1 more)
back-users/: Cargo.toml  Dockerfile  README.md
back-users/src/api/: events.rs  router.rs
back-users/src/config/: conf.rs
back-users/src/models/: errors.rs
back-users/src/services/: users.rs
front-app/: Dockerfile  package-lock.json  package.json
front-app/src/: App.tsx  index.tsx
lib-protos/: Cargo.toml  buf.gen.yaml
lib-protos/protos/: events.proto
lib-protos/protos/users/: users_manager.proto
lib-protos/src/: delta_tickets.rs  delta_tickets.serde.rs  delta_tickets.tonic.rs  lib.rs  users_manager.rs  users_manager.serde.rs  users_manager.tonic.rs
manager-events/: Cargo.toml  Dockerfile  Makefile  README.md
manager-events/src/: main.rs
manager-users/: Cargo.toml  Dockerfile  Makefile  README.md
manager-users/src/: main.rs
manager-users/src/api/: users.rs
manager-users/src/config/: logconfig.rs
manager-users/src/db/: conn.rs
manager-users/src/db/migrations/: 20240531235922_create_schema_app.down.sql  20240531235922_create_schema_app.up.sql  20240531235932_create_table_roles.down.sql  20240531235932_create_table_roles.up.sql  20240531235952_create_table_users.down.sql  20240531235952_create_table_users.up.sql  20240928175701_populate_table_roles.down.sql  20240928175701_populate_table_roles.up.sql  20240928175719_populate_table_users.down.sql  20240928175719_populate_table_users.up.sql
manager-users/src/db/repository/: users.rs
manager-users/src/models/: errors.rs  users.rs
secrets/: db_events.env  db_users.env  routing.env
(+23 files in other folders)
