[package]
name = "back-users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.7" }
tonic = { version = "0.12.3"}
reqwest = { version = "0.12.7"}
lazy_static ={ version = "1.5.0" }
serde = { version = "1.0.210", features = ["derive"] }
time = { version = "0.3.36", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["std", "fmt", "json", "time"] }
bcrypt = { version = "0.15.1" }
lib_protos = { path = "./../lib-protos" }
