[package]
name = "delta-tickets-users-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tonic = { version = "0.12.3"}
tonic-reflection = { version = "0.12.3" }
lazy_static ={ version = "1.5.0" }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1.8.0", features = ["serde"] }
time = { version = "0.3.36", features = ["serde"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["std", "fmt", "json", "time"] }
lib_protos = { path = "./../lib-protos" }
